# lightning-Habana

./: .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.azure/: README.md  hpu-tests-fabric.yml  hpu-tests-pl.yml  hpu-tests.yml
.github/: CODEOWNERS
.github/workflows/: ci-checks.yml  ci-dockers.yml  ci-testing.yml  docs-deploy.yml  label-conflicts.yml  release-pypi.yml
_requirements/: docs.txt  examples.txt  lightning  lightning.txt  pytorch-lightning.txt  test.txt  typing.txt
dockers/ci-runner-hpu/: Dockerfile
docs/: .buildinfo  advanced.html  basic.html  genindex.html  index.html  intermediate.html  objects.inv  readme.html  search.html  searchindex.js
docs/_sources/: advanced.rst.txt  intermediate.rst.txt  readme.md.txt
docs/_static/: documentation_options.js  theme_variables.jinja
docs/source/: advanced.rst  basic.rst  conf.py  hpu.rst  index.rst  intermediate.rst
examples/: mnist_sample.py
examples/fabric/: train_fabric.py
examples/fabric/image_classifier/: train_fabric.py
examples/pytorch/: hpu_graphs.py  language_model.py  mnist_sample.py  mnist_trainer.py  multi_tenants.sh  ops_fp32_mnist.txt
requirements/: _docs.txt  _test.txt  base.txt  lightning.txt  pytorch-lightning.txt  typing.txt
src/lightning_habana/: __about__.py  __init__.py  accelerator.py
src/lightning_habana/accelerators/: __init__.py  accelerator.py
src/lightning_habana/fabric/: __init__.py  accelerator.py
src/lightning_habana/fabric/accelerator/: __init__.py  hpu.py
src/lightning_habana/fabric/plugins/: __init__.py  fsdp_precision.py  io_plugin.py  precision.py
src/lightning_habana/fabric/strategies/: __init__.py  ddp.py  fsdp.py  hpu_parallel.py  hpu_single.py  parallel.py  single.py
src/lightning_habana/fabric/utils/: __init__.py  imports.py
src/lightning_habana/plugins/: __init__.py  io_plugin.py  precision.py
src/lightning_habana/plugins/io/: __init__.py  fabric_io.py
src/lightning_habana/plugins/precision/: __init__.py  fabric_precision.py
src/lightning_habana/pytorch/: __init__.py  accelerator.py
src/lightning_habana/pytorch/accelerator/: __init__.py  hpu.py
src/lightning_habana/pytorch/datamodule/: __init__.py  datamodule.py  utils.py
src/lightning_habana/strategies/: __init__.py  fabric_parallel.py  fabric_single.py  parallel.py  single.py
src/lightning_habana/utils/: __init__.py  hpu_distributed.py  imports.py  resources.py
tests/: __init__.py  conftest.py  helpers.py  pytest.ini  run_standalone_tests.sh  test_accelerator.py  test_fabric_accelerator.py  test_fabric_precision.py  test_fabric_strategy.py  test_sample_module.py
tests/plugins/: test_precision.py
tests/precision/: test_hpu.py  test_precision.py
tests/test_common/: test_resources.py
tests/test_fabric/: __init__.py  fabric_helpers.py  test_accelerator.py  test_fsdp.py  test_hpu_accelerator.py  test_hpu_precision.py  test_hpu_strategy.py  test_precision.py  test_strategy.py
tests/test_pytorch/: __init__.py  ops_bf16.txt  test_accelerator.py  test_checkpointing.py  test_cli.py  test_compile.py  test_datamodule.py  test_deepspeed.py  test_dynamic_shapes.py  test_fsdp.py  test_hpu_graphs.py  test_multi_accelerator.py  test_multi_tenancy.py  test_precision.py  test_profiler.py  test_reduce_op.py
tests/test_pytorch/strategies/: test_deepspeed.py  test_fsdp.py  test_hpu_ddp.py  test_hpu_parallel.py
tests/tests_fabric/: __init__.py  fabric_helpers.py  test_hpu_accelerator.py  test_hpu_precision.py  test_hpu_strategy.py
tests/tests_pytorch/: __init__.py  test_accelerator.py  test_precision.py
(+22 files in other folders)
